--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
         MONGO_URI: mongodb://localhost:27017/growi_test
 
     - name: Slack Notification
-      uses: weseek/slack-notification@master
+      uses: weseek/slack-notification@support/create-compact-mode
       if: failure()
       with:
         type: ${{ job.status }}
